# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================

# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( misc_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/ReadLine.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/DotWriter.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/UnionFindSet.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
