# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================

# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================


if ( POPT_FOUND )
  set ( popt_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/PoptMainApp.cc
    PARENT_SCOPE
    )
else ( )
  set ( popt_SOURCES
    PARENT_SCOPE
    )
endif ( )


# ===================================================================
#  ターゲットの設定
# ===================================================================
