# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================

# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( textproc_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/OptionParser.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Scanner.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/ShString.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/StrBuff.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
