

# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

# ===================================================================
#  cython 用のソースファイルの設定
# ===================================================================

set ( CYTHON_SOURCES
  cym_base.pyx
  )

set_source_files_properties (
  ${CYTHON_SOURCES}
  PROPERTIES CYTHON_IS_CXX TRUE
  )


# ===================================================================
#  module ターゲットの設定
# ===================================================================

cython_add_module ( cym_base
  ${CYTHON_SOURCES}
  $<TARGET_OBJECTS:ym_base>
  )

target_compile_options ( cym_base
  PRIVATE "-O3"
  )

target_compile_definitions ( cym_base
  PRIVATE "-DNDEBUG"
  )

target_link_libraries ( cym_base
  ${YM_LIB_DEPENDS}
  )

#install (TARGETS
#  ym_base_cy
#  DESTINATION lib/python/ym_base
#  )
