
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( binio )
add_subdirectory ( gen )
add_subdirectory ( itvl )
add_subdirectory ( misc )
add_subdirectory ( textproc )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
